Adding Tigre for test purpose

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Covid-19",
-  "name": "Covid-19 - San Miguel",
+  "name": "Covid-19",
   "icons": [
     {
       "src": "favicon.ico",
